[gd_scene load_steps=81 format=3 uid="uid://dd0mqkr5rkcc3"]

[ext_resource type="Script" uid="uid://d3vii6k0jywci" path="res://Scenes/player.gd" id="1_8gxox"]
[ext_resource type="Texture2D" uid="uid://bggofqk1k8r4l" path="res://Assets/Player/Individual Sprites/adventurer-attack1-00.png" id="2_u7q4u"]
[ext_resource type="Texture2D" uid="uid://nq7jrtny8c84" path="res://Assets/Player/Individual Sprites/adventurer-attack1-01.png" id="3_ow0oh"]
[ext_resource type="Texture2D" uid="uid://cbe3iqt05l2rn" path="res://Assets/Player/Individual Sprites/adventurer-attack1-02.png" id="4_shso4"]
[ext_resource type="Texture2D" uid="uid://bu60s88espxq2" path="res://Assets/Player/Individual Sprites/adventurer-attack1-03.png" id="5_i12ug"]
[ext_resource type="Texture2D" uid="uid://d3g5imrpqikgs" path="res://Assets/Player/Individual Sprites/adventurer-attack1-04.png" id="6_3is57"]
[ext_resource type="Texture2D" uid="uid://n3va885vi2eo" path="res://Assets/Player/Individual Sprites/adventurer-attack2-00.png" id="7_vp4qt"]
[ext_resource type="Texture2D" uid="uid://cak6k4v64suwo" path="res://Assets/Player/Individual Sprites/adventurer-attack2-01.png" id="8_mt1nj"]
[ext_resource type="Texture2D" uid="uid://d3tcckc6t1spj" path="res://Assets/Player/Individual Sprites/adventurer-attack2-02.png" id="9_3unst"]
[ext_resource type="Texture2D" uid="uid://xnk06trjyxxc" path="res://Assets/Player/Individual Sprites/adventurer-attack2-03.png" id="10_fi0dx"]
[ext_resource type="Texture2D" uid="uid://hh2f6n4ojfhg" path="res://Assets/Player/Individual Sprites/adventurer-attack2-04.png" id="11_mce6g"]
[ext_resource type="Texture2D" uid="uid://jom4aw6e8s1u" path="res://Assets/Player/Individual Sprites/adventurer-attack2-05.png" id="12_nfw5m"]
[ext_resource type="Texture2D" uid="uid://bx1n8c23h1ri7" path="res://Assets/Player/Individual Sprites/adventurer-attack3-00.png" id="13_1ahqj"]
[ext_resource type="Texture2D" uid="uid://dp4rkqteq20qf" path="res://Assets/Player/Individual Sprites/adventurer-attack3-01.png" id="14_nbb6y"]
[ext_resource type="Texture2D" uid="uid://pnh0k5gu55va" path="res://Assets/Player/Individual Sprites/adventurer-attack3-02.png" id="15_ptfmh"]
[ext_resource type="Texture2D" uid="uid://b3fcdk6bdsfmt" path="res://Assets/Player/Individual Sprites/adventurer-attack3-03.png" id="16_0854a"]
[ext_resource type="Texture2D" uid="uid://c2l14oin6cvvk" path="res://Assets/Player/Individual Sprites/adventurer-attack3-04.png" id="17_75p27"]
[ext_resource type="Texture2D" uid="uid://dmkro3ffyxaos" path="res://Assets/Player/Individual Sprites/adventurer-attack3-05.png" id="18_nmywt"]
[ext_resource type="Texture2D" uid="uid://d35qrolq4lt60" path="res://Assets/Player/Individual Sprites/adventurer-fall-00.png" id="19_rfbon"]
[ext_resource type="Texture2D" uid="uid://dp5bjxwv6p3p3" path="res://Assets/Player/Individual Sprites/adventurer-fall-01.png" id="20_hgf1l"]
[ext_resource type="Texture2D" uid="uid://benj0who6porq" path="res://Assets/Player/Individual Sprites/adventurer-idle-2-00.png" id="21_xb2l2"]
[ext_resource type="Texture2D" uid="uid://b16fll2t5lt4a" path="res://Assets/Player/Individual Sprites/adventurer-idle-2-01.png" id="22_ocoad"]
[ext_resource type="Texture2D" uid="uid://cjm6dxnnulvg2" path="res://Assets/Player/Individual Sprites/adventurer-idle-2-02.png" id="23_r35nf"]
[ext_resource type="Texture2D" uid="uid://ctatb4vy2tsak" path="res://Assets/Player/Individual Sprites/adventurer-idle-2-03.png" id="24_hf81g"]
[ext_resource type="Texture2D" uid="uid://bmf3ix1wo5c4y" path="res://Assets/Player/Individual Sprites/adventurer-jump-00.png" id="25_s1h0b"]
[ext_resource type="Texture2D" uid="uid://cq0qt1gvfkndk" path="res://Assets/Player/Individual Sprites/adventurer-jump-01.png" id="26_s5o4n"]
[ext_resource type="Texture2D" uid="uid://bvc7ylgniknw7" path="res://Assets/Player/Individual Sprites/adventurer-jump-02.png" id="27_pfjpd"]
[ext_resource type="Texture2D" uid="uid://bipeeiggbycdd" path="res://Assets/Player/Individual Sprites/adventurer-jump-03.png" id="28_sywby"]
[ext_resource type="Texture2D" uid="uid://dvvxihanhvp7h" path="res://Assets/Player/Individual Sprites/adventurer-crnr-jmp-00.png" id="29_7ldla"]
[ext_resource type="Texture2D" uid="uid://b2308dm53tune" path="res://Assets/Player/Individual Sprites/adventurer-run2-00.png" id="29_b36gi"]
[ext_resource type="Texture2D" uid="uid://dhmeccavcvrvu" path="res://Assets/Player/Individual Sprites/adventurer-run2-01.png" id="30_bs0vi"]
[ext_resource type="Texture2D" uid="uid://bxhb4cfinr5j8" path="res://Assets/Player/Individual Sprites/adventurer-run2-02.png" id="31_lxi4n"]
[ext_resource type="Texture2D" uid="uid://ciwedrgtfktad" path="res://Assets/Player/Individual Sprites/adventurer-run2-03.png" id="32_apxt7"]
[ext_resource type="Texture2D" uid="uid://11kmvphcddkl" path="res://Assets/Player/Individual Sprites/adventurer-run2-04.png" id="33_dvnj3"]
[ext_resource type="Texture2D" uid="uid://cdmdknp68qphf" path="res://Assets/Player/Individual Sprites/adventurer-slide-00.png" id="34_3riw2"]
[ext_resource type="Texture2D" uid="uid://bnnnu7l8o8gff" path="res://Assets/Player/Individual Sprites/adventurer-slide-01.png" id="35_4lr8v"]
[ext_resource type="Script" uid="uid://xtak4f3htlw6" path="res://Scenes/States.gd" id="36_8gxox"]
[ext_resource type="Script" uid="uid://bnwdxrkce1fhi" path="res://Scenes/IdleState.gd" id="37_11gg7"]
[ext_resource type="Script" uid="uid://b2dqpagvl5kd6" path="res://Scenes/LockedState.gd" id="37_ph33w"]
[ext_resource type="Script" uid="uid://bskhsx12lxu5w" path="res://Scenes/RunState.gd" id="38_qpa8y"]
[ext_resource type="Script" uid="uid://cnev3brscxgj3" path="res://Scenes/JumpState.gd" id="39_sbwqj"]
[ext_resource type="Script" uid="uid://d0xt1m20jt751" path="res://Scenes/JumpPeakState.gd" id="40_xwi16"]
[ext_resource type="Script" uid="uid://wq5ljqgwxtgx" path="res://Scenes/FallState.gd" id="42_7ldla"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b2j0d"]
atlas = ExtResource("2_u7q4u")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l6ig"]
atlas = ExtResource("3_ow0oh")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3r50"]
atlas = ExtResource("4_shso4")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_utr5e"]
atlas = ExtResource("5_i12ug")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_kewli"]
atlas = ExtResource("6_3is57")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_do7qw"]
atlas = ExtResource("7_vp4qt")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h6tc"]
atlas = ExtResource("8_mt1nj")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rogd"]
atlas = ExtResource("9_3unst")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_48p26"]
atlas = ExtResource("10_fi0dx")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_anp34"]
atlas = ExtResource("11_mce6g")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdjat"]
atlas = ExtResource("12_nfw5m")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_j420s"]
atlas = ExtResource("13_1ahqj")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcq4v"]
atlas = ExtResource("14_nbb6y")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qavcc"]
atlas = ExtResource("15_ptfmh")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd26m"]
atlas = ExtResource("16_0854a")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_lufic"]
atlas = ExtResource("17_75p27")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxclr"]
atlas = ExtResource("18_nmywt")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_onxu2"]
atlas = ExtResource("19_rfbon")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_gci7n"]
atlas = ExtResource("20_hgf1l")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcwf7"]
atlas = ExtResource("21_xb2l2")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_20bc7"]
atlas = ExtResource("22_ocoad")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfgxe"]
atlas = ExtResource("23_r35nf")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg0n1"]
atlas = ExtResource("24_hf81g")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjt2w"]
atlas = ExtResource("25_s1h0b")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lfai"]
atlas = ExtResource("26_s5o4n")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3o0i"]
atlas = ExtResource("27_pfjpd")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgo6y"]
atlas = ExtResource("28_sywby")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7t2e"]
atlas = ExtResource("29_7ldla")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qm6yy"]
atlas = ExtResource("29_b36gi")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcmgo"]
atlas = ExtResource("30_bs0vi")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnncm"]
atlas = ExtResource("31_lxi4n")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj2w7"]
atlas = ExtResource("32_apxt7")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_iojyt"]
atlas = ExtResource("33_dvnj3")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhicv"]
atlas = ExtResource("34_3riw2")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrakr"]
atlas = ExtResource("35_4lr8v")
region = Rect2(0, 0, 50, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_wsa1w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2j0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l6ig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3r50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utr5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kewli")
}],
"loop": false,
"name": &"Attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_do7qw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h6tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rogd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48p26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anp34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdjat")
}],
"loop": false,
"name": &"Attack2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j420s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcq4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qavcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd26m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lufic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxclr")
}],
"loop": false,
"name": &"Attack3",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onxu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gci7n")
}],
"loop": true,
"name": &"Fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcwf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20bc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfgxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg0n1")
}],
"loop": true,
"name": &"Idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjt2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lfai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3o0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgo6y")
}],
"loop": false,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7t2e")
}],
"loop": true,
"name": &"JumpFrame",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm6yy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcmgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnncm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj2w7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iojyt")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhicv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrakr")
}],
"loop": true,
"name": &"Slide",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o4w3n"]
size = Vector2(8, 25)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("Player_Animation", "Collider")]
script = ExtResource("1_8gxox")
Player_Animation = NodePath("Player_animations")
Collider = NodePath("Player_collision")
JUMPBUFFERTIME = 0.05
JUMPCOOLDOWN = 0.5

[node name="Player_animations" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wsa1w")
animation = &"Slide"
frame = 1
frame_progress = 0.935947

[node name="Player_collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_o4w3n")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = -7000000
limit_top = -7000000
limit_right = 7000000
limit_bottom = 7000000
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 8.0
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("36_8gxox")

[node name="Locked" type="Node" parent="StateMachine"]
script = ExtResource("37_ph33w")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("37_11gg7")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("38_qpa8y")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("39_sbwqj")

[node name="JumpPeak" type="Node" parent="StateMachine"]
script = ExtResource("40_xwi16")

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("42_7ldla")

[node name="Timers" type="Node" parent="."]

[node name="JumpBuffer" type="Timer" parent="Timers"]
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="JumpCooldownTimer" type="Timer" parent="Timers"]
one_shot = true
